# proof-of-tests

./: README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: nix.yml  update-flake-lock.yml
e2e/: Cargo.toml  flake.nix
e2e/src/: main.rs
pot-cli/: Cargo.toml  LICENSE  README.md  flake.nix
pot-cli/examples/fail_randomly/: Cargo.toml  user
pot-cli/examples/fail_randomly/src/: lib.rs
pot-cli/examples/hello_pot/: Cargo.toml
pot-cli/examples/hello_pot/src/: lib.rs
pot-cli/examples/rgeometry-pot/: Cargo.toml
pot-cli/examples/rgeometry-pot/src/: lib.rs
pot-cli/src/: hyperloglog.rs  main.rs
pot-cli/tests/: cli_tests.rs  hello_pot.wasm  hello_pot.wat  hello_pot_bad_test_type.wat  hello_pot_invalid_repo_utf8.wat  hello_pot_no_memory.wat  hello_pot_no_repo.wat
pot-web/: .dev.vars  .gitignore  Cargo.toml  flake.nix  log.txt  schema.sql  wrangler.toml
pot-web/.github/: dependabot.yml
pot-web/.wrangler/tmp/bundle-Yr9txx/: middleware-loader.entry.ts
pot-web/.wrangler/tmp/bundle-ksM102/: middleware-insertion-facade.js  middleware-loader.entry.ts
pot-web/.wrangler/tmp/bundle-vLUVe9/: middleware-insertion-facade.js  middleware-loader.entry.ts
pot-web/.wrangler/tmp/dev-78k2sO/: shim.js  shim.js.map
pot-web/.wrangler/tmp/dev-NeZXzZ/: 13328a2cfaf01805f1c6d01b20c85baac26c789b-index.wasm  shim.js  shim.js.map
pot-web/.wrangler/tmp/dev-snrXip/: b68ab34c0ee799e7fadf255533ed63172d46d6e4-index.wasm  shim.js  shim.js.map
pot-web/src/: app.rs  github.rs  handlers.rs  lib.rs  wasm.rs
pot-web/src/components/: messages.rs  mod.rs
pot-web/style/: tailwind.css
pot-web/tests/: org-repos.json  user-repos.json  user.json
