[package]
name = "pot-cli"
version = "0.1.0"
edition = "2021"
include = ["/tests/*.wat", "/tests/*.wasm"]

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
rand_chacha = { version = "0.9.0", features = ["os_rng"] }
serde = "1.0.218"
serde_json = "1.0.140"
wasi-common = "30.0.2"
wasm-bindgen-futures = "0.4.45"
wasmtime = "30.0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
