[package]
name = "pot-cli"
version = "0.1.0"
edition = "2021"
include = ["/tests/*.wat", "/tests/*.wasm"]

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
rand_chacha = { version = "0.9.0", features = ["os_rng"] }
serde = "1.0.219"
serde_json = "1.0.140"
wasi-common = "31.0.0"
wasm-bindgen-futures = "0.4.45"
wasmtime = "31.0.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
