[package]
name = "pot-cli"
version = "0.1.0"
edition = "2021"
include = ["/tests/*.wat", "/tests/*.wasm"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
rand_chacha = { version = "0.9.0", features = ["os_rng"] }
serde = "1.0.228"
serde_json = "1.0.145"
wasi-common = "30.0.2"
wasm-bindgen-futures = "0.4.55"
wasmtime = "30.0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
